# tmexclude

./: .gitignore  .mergify.yml  .parcelrc  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  bacon.toml  config.example.yaml  config.example.yml  formula.rb  launch.plist  license_collect.sh  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
.cargo/: config
.github/workflows/: analysis.yml  release.yml  test.yml
compgen/: Cargo.toml
compgen/src/: main.rs
src/: App.tsx  agent.rs  args.rs  client.rs  commands.ts  common.rs  config.rs  daemon.rs  emotion.d.ts  equalSelector.ts  error.hbs  errors.rs  i18n.tsx  index.html  index.tsx  lib.rs  licenses.ts  main.rs  persistent.rs  scan.rs  spinner.rs  states.ts  states.tsx  tmutil.rs  transitions.ts  utils.rs  utils.ts  walker.rs  watcher.rs
src-tauri/: Cargo.toml  bacon.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: decorations.rs  main.rs  metadata.rs  plugins.rs  utils.rs
src-tauri/src/lib/: config.rs  error.rs  lib.rs  metrics.rs  mission.rs  properties.rs  skip_cache.rs  tmutil.rs  walker.rs  watcher.rs
src-tauri/tests/: read_config.rs
src-tauri/tests/configs/: follow_symlink.yaml  simple.yaml
src/app/: commands.ts  equalSelector.ts  global.css  layout.tsx  page.tsx  providers.tsx  states.tsx
src/app/main/: Header.tsx  MainLayout.tsx  NavBar.tsx  PathText.tsx  layout.tsx  routes.tsx
src/app/main/directories/: Directories.tsx  page.tsx
src/app/main/general/: page.tsx
src/app/main/rules/: RuleItem.tsx  Rules.tsx  page.tsx
src/app/main/scan/: Scan.tsx  SelectionTable.tsx  TipText.tsx  page.tsx
src/app/main/scan/pages/: Applying.tsx  Detail.tsx  Done.tsx  InProgress.tsx  Overview.tsx  Welcome.tsx
src/app/main/stats/: Stats.tsx  page.tsx
src/bindings/: ApplyErrors.ts  BuildMeta.ts  ExclusionActionBatch.ts  Metrics.ts  PreConfig.ts  PreDirectory.ts  PreRule.ts  Rule.ts  ScanStatus.ts
src/components/: PathText.tsx  RuleItem.tsx  SelectionTable.tsx  TipText.tsx  main-layout.tsx  mainLayout.tsx  pathText.tsx  ruleItem.tsx  selectionTable.tsx  text.tsx  title.tsx
src/i18n/: en.json  zh_hans.json
src/lib/: config.rs  daemon.rs  errors.rs  lib.rs  persistent.rs  rpc.rs  tmutil.rs  utils.rs  walker.rs  watcher.rs
src/pages/: About.tsx  Ack.tsx  License.tsx  _app.tsx  _document.tsx  about.tsx  index.tsx
src/pages/main/: Directories.tsx  General.tsx  Header.tsx  MainLayout.tsx  NavBar.tsx  Rules.tsx  Scan.tsx  Stats.tsx  directories.tsx  general.tsx  routes.tsx  rules.tsx  scan.tsx  stats.tsx
src/pages/main/scan/: Applying.tsx  Detail.tsx  Done.tsx  InProgress.tsx  Log.tsx  Overview.tsx  Welcome.tsx
tests/configs/: allow_missing_skip_dir.yaml  broken_dir.yaml  broken_rule.yaml  missing_dir.yaml  simple.yaml  simple_reload.yaml
tmexclude/: Cargo.toml
tmexclude/src/: agent.rs  args.rs  client.rs  common.rs  consts.rs  daemon.rs  main.rs  scan.rs  utils.rs
tmexclude/src/lib/: config.rs  daemon.rs  errors.rs  lib.rs  rpc.rs  tmutil.rs  walker.rs  watcher.rs
tmexclude/tests/: read_config.rs
tmexclude/tests/configs/: broken_rule.yaml  inherit_rule.yaml  inherit_rule_loop.yaml  simple.yaml
tmexclude/tests/symlinks/: cyclic_a  cyclic_b  one
xtask/: Cargo.toml
xtask/src/: main.rs
