[package]
name = "tmexclude"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tmexclude"
path = "./src/main.rs"

[lib]
name = "tmexclude_lib"
path = "./src/lib.rs"

[dependencies]
actix = "0.12"
actix-rt = "2.5"
actix-web = "4.0.0-beta.13"
atomic = "0.5"
clap = { version = "3.0.0-rc.4", features = ["derive"] }
core-foundation = { version = "0.9", features = ["mac_os_10_8_features"] }
crossbeam-queue = "0.3"
directories = "4.0"
eyre = "0.6"
figment = { version = "0.10", features = ["toml", "yaml"] }
fs3 = "0.5"
fsevent-stream = "0.2"
humantime-serde = "1.0"
itertools = "0.10"
jwalk = "0.6"
log = "0.4"
moka = "0.6"
num_cpus = "1.13"
parking_lot = "0.11"
pretty_env_logger = "0.4"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "2.1"
tap = "1.0"
thiserror = "1.0"
xattr = "0.2"

[dev-dependencies]
maplit = "1.0"
tempfile = "3.2"
