[package]
name = "tmexclude"
version = "0.1.0"
edition = "2021"
authors = ["LightQuantum <self@lightquantum.me>"]
description = "Exclude undesired files (node_modules, target, etc) from your TimeMachine backup."

[[bin]]
name = "tmexclude"
path = "./src/main.rs"

[lib]
name = "tmexclude_lib"
path = "./src/lib/lib.rs"

[dependencies]
actix = "0.12"
actix-signal = { version = "0.1", features = ["derive"] }
actix-rt = "2.5"
clap = { version = "3.0.5", features = ["derive"] }
color-eyre = "0.5"
core-foundation = { version = "0.9", features = ["mac_os_10_8_features"] }
crossbeam-queue = "0.3"
directories = "4.0"
eyre = "0.6"
figment = { version = "0.10", features = ["toml", "yaml"] }
fsevent-stream = "0.2"
humantime-serde = "1.0"
itertools = "0.10"
jwalk = "0.6"
log = "0.4"
moka = "0.7"
parking_lot = "0.11"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "2.1"
tap = "1.0"
thiserror = "1.0"
xattr = "0.2"
bincode = "1.3"
tokio-serde = { version = "0.8", features = ["bincode"] }
tokio-util = { version = "0.6", features = ["codec"] }
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1.15", features = ["sync", "macros"] }

[dev-dependencies]
maplit = "1.0"
tempfile = "3.2"
