[package]
name = "tmexclude"
version = "0.2.1"
description = "A Tauri App"
authors = ["LightQuantum <self@lightquantum.me>"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tmexclude"
path = "src/main.rs"

[lib]
name = "tmexclude_lib"
path = "src/lib/lib.rs"

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }
vergen = "7.4"

[dependencies]
once_cell = "1.16"
regex = "1.7"
auto-launch = "0.4"
fsevent-stream = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
sentry = { version = "0.29", features = ["tracing"] }
tauri = { version = "1.2.3", features = ["dialog-open", "macos-private-api", "path-all", "shell-open", "system-tray", "updater", "window-show", "window-start-dragging"] }
itertools = "0.10"
parking_lot = "0.12"
maplit = "1.0"
tap = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
ts-rs = { git = "https://github.com/Aleph-Alpha/ts-rs.git" }
eyre = "0.6"
xattr = "1.0"
jwalk = "0.8"
serde_yaml = "0.9"
shellexpand = "3.0"
futures = "0.3"
moka = "0.9"
core-foundation = { version = "0.9", features = ["mac_os_10_8_features"] }
crossbeam = "0.8"
directories = "4.0"
arc-swap = "1.5"
window-vibrancy = "0.3"
cocoa = "0.24"
objc = "0.2"
libc = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
