[package]
name = "tmexclude"
version = "0.1.2"
edition = "2021"
authors = ["LightQuantum <self@lightquantum.me>"]
description = "Exclude undesired files (node_modules, target, etc) from your TimeMachine backup."

[[bin]]
name = "tmexclude"
path = "./src/main.rs"

[lib]
name = "tmexclude_lib"
path = "./src/lib/lib.rs"

[dependencies]
actix = "0.13"
actix-rt = "2.7"
actix-signal = { version = "0.2", features = ["derive"] }
backtrace = "0.3"
bincode = "1.3"
clap = { version = "3.1", features = ["derive"] }
console = "0.15"
core-foundation = { version = "0.9", features = ["mac_os_10_8_features"] }
crossbeam-queue = "0.3"
dialoguer = { version = "0.10", default-features = false }
directories = "4.0"
eyre = "0.6"
fs2 = "0.4"
fsevent-stream = "0.2"
futures-util = { version = "0.3", features = ["sink"] }
humantime = "2.1"
humantime-serde = "1.1"
indicatif = "0.16"
itertools = "0.10"
jwalk = "0.6"
libc = "0.2"
log = "0.4"
maplit = "1.0"
moka = "0.8"
multi_log = "0.1"
once_cell = "1.12"
oslog = "0.2"
parking_lot = "0.12"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
shellexpand = "2.1"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tap = "1.0"
template-eyre = "0.1.0-alpha.6"
thiserror = "1.0"
tokio = { version = "1.19", features = ["sync", "macros"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.5"
xattr = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.3"
